feat(rag): backend RAG 核心 + Chat/Agent/Workflow 集成 + 记忆开关 + answer_cache
知识库全链路：KB/文档/节点/权限 CRUD + DocumentParser(Tika) + IndexJobWorker
(embed→halfvec 2048 HNSW) + RagRetrievalService 8 步线性检索(I1/I3/P1/A1/A2/
B1-B4 不变式) + VisibilitySetService(USER+ROLE+DEPT 三层可见集 Redis 缓存).

阶段5 集成：RagScopeResolver(P4 求交) + retrieveEvidence 多 KB → Chat(SYSTEM
注入)/Agent(firstStepConfigOverride)/Workflow(RETRIEVAL 节点回调) 三模式 +
/api/knowledge/retrieve|ask + chat.kb_ids/agent_kb_bindings/workflow_kb_bindings.
canRead 委托可见集作单一权限权威(DIRECTORY/DOCUMENT/ROLE/DEPT 可达, B1 修复).

记忆开关：RagModeResolver 4 层(session>agent/workflow>global, 默认关) 门控
RAG+记忆+answer_cache. /api/chat/memories + /api/knowledge/retrieval-logs 端点.

answer_cache(B)：AnswerCacheService 跨会话语义缓存, 接进 retrieve()(存 answer)
+ retrieveEvidence()(存证据 systemPrompt). HNSW key_embedding 近邻 + per-user
强制 + P3 permission_signature(sha256 可见集+kb_scope) + P2a evidence hash 复校,
懒失效(无主动 purge). opt-in 默认关. 冒烟绿(同 query 8121ms→190ms CACHE_HIT ~43x).
修 CACHE_HIT path l2_lexical_fallback NOT NULL 静默丢 trace bug.

Agent.config/Skill.config jsonb typehandler + LongArrayTypeHandler + 全套 DTO/VO/实体.